# web_services

./: .bash_history  .gitattributes  .gitignore  3dviewer_concept.txt  AGENTS.md  ANIMATION_VERIFICATION_REPORT.md  AUTORIG_TEST_REPORT_2026-03-03.md  AUTOSTART_README.md  COMMIT_INSTRUCTIONS.md  DEFAULT_LIGHTING_README.md  DEVELOPER_SETUP.md  FINAL_REPORT_animations_glb.md  README.md  RENDERFARMER_BOT_README.md  Rule_Deployment.md  SERVICE_CONCEPT.md  TESTING_INSTRUCTIONS.md  TEST_REPORT_animations_glb.md  autorig.skill.md  check_autorig_404.js  check_task.py  commit.sh  debug_admin_test.js  package-lock.json  package.json  page_content.html  renderfarmer_watchdogg.sh  renderfarmerbot.py  renderfarmerbot_version.txt  setup_autostart.sh  skill.md  skill.xml  test_animations_verification.js  test_head.py  test_report_custom_animations.md
.cursor/: ide_state.json
.venv-autorig/: pyvenv.cfg
.wdm/: drivers.json
CGTrader_SUBMIT_SERVER/: CHROME_ISSUE.md  COOKIES_EXPORT_GUIDE.md  DEPLOYMENT_NOTES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  MAIN_TASK.md  (+24 more)
autorig-online/mcp/: README.md  pyproject.toml  run_server.sh
autorig-online/mcp/docs/: 01-renderfin-description.md
autorig-online/mcp/src/renderfin_mcp/: __init__.py  async_worker.py  image_utils.py  logger.py  server.py  task_queue.py
autorig-online/mcp/tests/: __init__.py  test_integration.py  test_real_render.py  test_task_queue.py  test_worker.py
autorig-online/mcp/vars/: tasks.json  test_queue.json
autorig-online/mcp/vars/pics/: debug_test.png.json  test_horse.png.json  worker_test.png.json
(+641 files in other folders)
